--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@fortawesome/free-solid-svg-icons": "^7.0.1",
     "@fortawesome/react-fontawesome": "^3.0.2",
     "@iconify/react": "^6.0.1",
+    "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
+    "js-cookie": "^3.0.5",
     "lightgallery": "^2.9.0",
+    "lottie-react": "^2.4.1",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-bootstrap": "^2.10.10",
