--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
+    "@types/node": "24.7.0",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "eslint": "^9.37.0",
     "eslint-config-next": "^15.5.4",
