--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^2.10.10",
     "react-date-range": "^2.0.1",
     "react-dom": "19.1.0",
+    "react-loading-skeleton": "^3.5.0",
     "swiper": "^12.0.2"
   },
   "devDependencies": {
