--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.0",
     "@iconify/react": "^6.0.1",
+    "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "js-cookie": "^3.0.5",
@@ -23,6 +24,8 @@
     "react-date-range": "^2.0.1",
     "react-dom": "19.1.0",
     "react-loading-skeleton": "^3.5.0",
+    "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5",
     "swiper": "^12.0.2"
   },
   "devDependencies": {
