--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "15.5.2",
     "react": "19.1.0",
     "react-bootstrap": "^2.10.10",
+    "react-calendar": "^6.0.0",
     "react-date-range": "^2.0.1",
     "react-dom": "19.1.0",
     "react-loading-skeleton": "^3.5.0",
