--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "js-cookie": "^3.0.5",
     "lightgallery": "^2.9.0",
     "next": "15.5.2",
+    "rc-slider": "^9.7.2",
     "react": "19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-calendar": "^6.0.0",
