--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_API_URL=http://127.0.0.1:8000/api
+NEXT_PUBLIC_API_URL=http:/buzzhiring.shopsatkhira.com/api
 
 NEXT_PUBLIC_SUPPORT_EMAIL=support@bookingxpart.com
