added blogs and fixed style issue

--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "bootstrap": "^5.3.8",
     "js-cookie": "^3.0.5",
     "lightgallery": "^2.9.0",
-    "next": "15.5.2",
+    "next": "^16.1.6",
     "rc-slider": "^9.7.2",
-    "react": "19.1.0",
+    "react": "^19.2.4",
     "react-bootstrap": "^2.10.10",
     "react-calendar": "^6.0.0",
     "react-date-range": "^2.0.1",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.2.4",
     "react-loading-skeleton": "^3.5.0",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
